--- a/style.css
+++ b/style.css
@@ -786,7 +786,7 @@ footer{
         flex-wrap: wrap;
         column-gap: 30px;
         padding-top: 246px;
-        padding-bottom: 455px;
+        padding-bottom: 355px;
     }
 
     .wine_card{
@@ -941,7 +941,7 @@ footer{
     .social_links_footer{
         word-spacing: 35px;
         border: none;
-        padding: 6px 35px 6px 35px;
+        padding: 7px 35px 7px 35px;
         border-bottom: 1px solid #FFFFFF;
     }
 
@@ -956,6 +956,7 @@ footer{
 
     .me.second_footer_block{
         border-bottom: 1px solid #FFFFFF;
+        padding: 15px 0;
     }
 
 }
