--- a/style.css
+++ b/style.css
@@ -956,7 +956,7 @@ footer{
 
     .me.second_footer_block{
         border-bottom: 1px solid #FFFFFF;
-        padding: 15px 0;
+        padding: 14.5px 0 14px 0;
     }
 
 }
