--- a/reset.css
+++ b/reset.css
@@ -32,7 +32,7 @@ dd {
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
   text-rendering: optimizeSpeed;
   font-style: normal;
   font-weight: normal;
