--- a/reset.css
+++ b/reset.css
@@ -100,16 +100,10 @@ html, body {
   scrollbar-width: 8px;
 }
 
-/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
-@media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: smooth !important;
-  }
+html, *{
+  scroll-behavior: smooth;
 }
 
-*{
-    scroll-behavior: smooth !important;  
+input, select {
+  outline: none;
 }
